@@ -382,10 +382,16 @@ public class NameNode implements ClientProtocol, DatanodeProtocol,
     stateChangeLog.debug("*DIR* Namenode.delete:  " + src);
     return namesystem.delete(src, recursive);
   }
-  /**
+  /**@deprecated Use getFileInfo(String) instead
    */
+  @Deprecated
   public boolean exists(String src) throws IOException {
-    return namesystem.exists(src);
+    try {
+      getFileInfo(src);
+      return true;
+    } catch (FileNotFoundException e) {
+      return false;
+    }
   }
 
   /**
